# HydroLite-Mac

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  user_guide_zh.md
cases/: demo.yaml  demo_gee.yaml  demo_swmm.yaml  demo_variant.yaml
configs/: gee.example.yaml  gee.local.example.yaml  openhydronet.example.yaml
data_demo/: rainfall.csv  reaches.csv  reaches_variant.csv  subcatchments.csv
docs/: ai_flood_forecasting_roadmap.md  beta_feedback_workflow.md  calibration_roadmap.md  cloud_smoke_test.md  data_templates.md  demo_script_zh.md  demo_walkthrough.md  deployment.md  desktop_app_roadmap.md  drought_forecast_plan.md  faq_zh.md  flood_forecast_plan.md  full_modeling_workflow.md  gee_authentication_guide.md  gee_module.md  github_push_commands.md  hec_hms_dss_flow_results.md  hec_hms_file_format_calibration.md  hec_hms_hydrolite_comparison.md  hec_hms_integration_plan.md  hec_hms_official_validation.md  hec_hms_precipitation_dss.md  hec_hms_project_generator.md  hec_hms_rainfall_compute_validation.md  hec_hms_run_mvp.md  issue_backlog_v0.7.0.md  milestones_v0.7.0.md  openhydronet_module.md  phase1_acceptance.md  post_release_validation.md  project_wizard.md  project_workflow.md  qgis_bridge_diagnosis.md  qgis_bridge_roadmap.md  qgis_process_bridge.md  qgis_project_workflow.md  qgis_to_hydrolite_inputs.md  quickstart_zh.md  release_announcement_v0.5.0-alpha.2.md  release_announcement_v0.6.0-beta.1.md  (+13 more)
hydrolite/: __init__.py  __main__.py  __version__.py  batch.py  beta.py  compare.py  config.py  data_templates.py  export_report.py  flood_metrics.py  healthcheck.py  hec_hms.py  hec_hms_format.py  hec_hms_precipitation.py  hec_hms_results.py  hydrology.py  io.py  metrics.py  observed.py  plotting.py  project.py  release.py  (+10 more)
(+144 files in other folders)
