[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrolite-mac"
version = "0.1.0"
description = "HydroLite-Mac: a local lightweight hydrologic and hydraulic modeling MVP."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "streamlit>=1.58",
  "swmm-toolkit>=0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["hydrolite*"]
