[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrolite-mac"
version = "0.5.0a0"
description = "HydroLite Studio: a project-centered lightweight hydrologic and hydraulic modeling workbench."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "pyswmm>=2.1",
  "PyYAML>=6.0",
  "streamlit>=1.58",
  "swmm-toolkit>=0.16.2",
  "swmm_api>=0.4.73",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["hydrolite*"]
